<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">
        <Button android:id="@+id/clock_tick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_clock_tick" />
        <Button android:id="@+id/context_click"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_context_click" />
        <Button android:id="@+id/keyboard_press"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_keyboard_press" />
        <Button android:id="@+id/keyboard_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_keyboard_release" />
        <Button android:id="@+id/keyboard_tap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_keyboard_tap" />
        <Button android:id="@+id/long_press"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_long_press" />
        <Button android:id="@+id/text_handle_move"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_text_handle_move" />
        <Button android:id="@+id/virtual_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_virtual_key" />
        <Button android:id="@+id/virtual_key_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_virtual_key_release" />


    </TableLayout>
</ScrollView>